--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "rodolphorocha", email = "rodolpho.r2008@gmail.com"},
 ]
-dependencies = ["django>=5.2.3"]
+dependencies = ["django>=5.2.3", "djangorestframework>=3.16.0"]
 requires-python = "==3.13.*"
 readme = "README.md"
 license = {text = "MIT"}
